apps/clubs/Cedille2/outlinewiki/prod/networking.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: Cedille2-outlinewiki-httpproxy
spec:
  virtualhost:
    fqdn: wiki.Cedille2.etsmtl.club
    tls:
      secretName: Cedille2-outlinewiki-tls
      minimumProtocolVersion: "1.3"
  routes:
    - conditions:
        - prefix: /
      enableWebsockets: true
      services:
        - name: Cedille2-outlinewiki-svc
          port: 3000
      timeoutPolicy:
        idle: 600s
        response: 600s
